<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.sleepQuality.SleepQualityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tv_Age"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_age"
            style="@style/InputLayoutStyle"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:hint="@string/tv_Age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tv_gender"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/margin_start_end"
            android:paddingBottom="10dp">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="160dp"
                android:layout_height="@dimen/cv_width"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/tv_male"
                android:textColor="@drawable/radio_text_selector" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="160dp"
                android:layout_height="@dimen/cv_width"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/tv_famale"
                android:textColor="@drawable/radio_text_selector" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tv_duration"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_duration"
            style="@style/InputLayoutStyle"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:hint="@string/tv_duration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tv_work"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_work"
            style="@style/InputLayoutStyle"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:hint="@string/tv_work">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tv_sleep_duration"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_sleep_duration"
            style="@style/InputLayoutStyle"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:hint="@string/tv_sleep_duration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sleep_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tv_height"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_height"
            style="@style/InputLayoutStyle"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:hint="@string/tv_height">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tv_weight"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_weight"
            style="@style/InputLayoutStyle"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:hint="@string/tv_weight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/btn_blue"
            android:text="Check"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@+id/il_weight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/il_weight"
            app:layout_constraintTop_toBottomOf="@+id/il_weight" />

    </LinearLayout>


</ScrollView>