<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/tv_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/txIntro"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_ask"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_intro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txletscheck"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ask" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sleep_quality"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_sleep_quality"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:text="@string/txSleepQuality"
                android:textAlignment="center"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/txDescript" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_duration"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgduration"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:text="@string/txDuration"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_disorder"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgdisorder"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:text="@string/txDisorder"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_songs"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgsongs"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/txSong"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_tips"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgtips"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/txTips"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/btn_duration"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:text="@string/txDuration"/>-->

<!--        <Button-->
<!--            android:id="@+id/btn_disorder"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:text="@string/txDisorder"/>-->

<!--        <Button-->
<!--            android:id="@+id/btn_song"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:text="@string/txSong"/>-->

<!--        <Button-->
<!--            android:id="@+id/btn_tips"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:text="@string/txTips"/>-->

    </LinearLayout>


</ScrollView>