<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile"
                style="@style/myCardViewStyle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cv_white_selector"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="24dp"
                        android:maxLines="1"
                        android:text="Afra Rainey Keysa "
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="AfraRaineyKeysa@gmail.com "
                        app:layout_constraintStart_toStartOf="@id/tv_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name"
                        tools:layout_editor_absoluteY="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_language"
                style="@style/cardViewStyle.myCardViewStyleFixed">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cv_white_selector"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/tv_language"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_about_sleeplab"
                style="@style/cardViewStyle.myCardViewStyleFixed">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cv_white_selector"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/tv_about"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_signOut"
                style="@style/cardViewStyle.myCardViewStyleFixed">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cv_white_selector"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:textColor="@color/red"
                    android:text="@string/tv_sign_out"/>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>